--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "axios": "^1.2.0",
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.20"
+    "express-session": "^1.17.3",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^2.0.20",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.3"
   }
 }
