--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.8",
     "firebase": "^10.12.0",
+    "google-login-react": "^0.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5"
   },
