--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ backend/npm-debug.log*
 backend/yarn-debug.log*
 backend/yarn-error.log*
 backend/pnpm-debug.log*
+backend/.env
 lerna-debug.log*
 
 backend/node_modules
