--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
     "google-login-react": "^0.2.17",
