--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/react": "^0.16.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
     "google-login-react": "^0.2.17",
+    "lexical": "^0.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
