--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "http-status-codes": "^2.3.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^2.0.20",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.12.0"
+    "pg": "^8.11.3"
   }
 }
